--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SharpGraph\SharpGraph.csproj" />
+      <ProjectReference Include="..\GraphVizard\GraphVizard.csproj" />
     </ItemGroup>
 
 </Project>
