--- a/.github/workflows/dotnet-publish.yaml
+++ b/.github/workflows/dotnet-publish.yaml
@@ -13,4 +13,4 @@ jobs:
       - run: dotnet pack -o pkg
       - env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-        run: dotnet nuget push pkg/GraphVizard*.nupkg --api-key ${NUGET_API_KEY}
+        run: dotnet nuget push pkg/GraphVizard*.nupkg --api-key ${NUGET_API_KEY} --source https://api.nuget.org/v3/index.json
