--- a/GraphVizard.Interop/GraphVizard.Interop.csproj
+++ b/GraphVizard.Interop/GraphVizard.Interop.csproj
@@ -16,10 +16,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="GitVersion.MsBuild" Version="6.0.5">
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        <PrivateAssets>all</PrivateAssets>
-      </PackageReference>
+        <PackageReference Include="Nerdbank.GitVersioning"
+                          Version="3.6.146"
+                          PrivateAssets="all"/>
         <None Include=".\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
