--- a/GraphVizard/GraphVizard.csproj
+++ b/GraphVizard/GraphVizard.csproj
@@ -11,15 +11,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\GraphVizard.Interop\GraphVizard.Interop.csproj" />
-        <None Include="..\README.md" Pack="true" PackagePath="\" />
+        <ProjectReference Include="..\GraphVizard.Interop\GraphVizard.Interop.csproj"/>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="GitVersion.MsBuild" Version="6.0.5">
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        <PrivateAssets>all</PrivateAssets>
-      </PackageReference>
+        <PackageReference Include="Nerdbank.GitVersioning"
+                          Version="3.6.146"
+                          PrivateAssets="all"/>
     </ItemGroup>
 
 </Project>
