--- a/GraphVizard.Interop/GraphVizard.Interop.csproj
+++ b/GraphVizard.Interop/GraphVizard.Interop.csproj
@@ -16,9 +16,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Nerdbank.GitVersioning"
-                          Version="3.6.146"
-                          PrivateAssets="all"/>
+      <PackageReference Include="GitVersion.MsBuild" Version="6.0.5">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
         <None Include=".\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
