--- a/GraphVizard.Interop/GraphVizard.Interop.csproj
+++ b/GraphVizard.Interop/GraphVizard.Interop.csproj
@@ -9,6 +9,7 @@
         <PackageId>GraphVizard.Interop</PackageId>
         <Authors>Karoline Rasmussen</Authors>
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
 
         <GraphVizVersion>12.2.0</GraphVizVersion>
         <GraphVizWin64Hash>1f16f1bcb4087096de0065e2b872f0e925437c93f4c7ba145d38dcdc853334e5</GraphVizWin64Hash>
