--- a/.github/workflows/dotnet-publish.yaml
+++ b/.github/workflows/dotnet-publish.yaml
@@ -7,6 +7,14 @@ on:
     branches:
       - "release/*"
 jobs:
+  test:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: "9.0.x"
+      - run: dotnet test
   publish:
     runs-on: ubuntu-22.04
     steps:
