--- a/.github/workflows/dotnet-publish.yaml
+++ b/.github/workflows/dotnet-publish.yaml
@@ -17,6 +17,7 @@ jobs:
       - run: dotnet test
   publish:
     runs-on: ubuntu-22.04
+    needs: test
     steps:
       - uses: actions/checkout@v4
         with:
