--- a/.github/workflows/dotnet-publish.yaml
+++ b/.github/workflows/dotnet-publish.yaml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: "9.0.x"
