--- a/.github/workflows/dotnet-publish.yaml
+++ b/.github/workflows/dotnet-publish.yaml
@@ -16,6 +16,9 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: "9.0.x"
+      - uses: daaku/gh-action-apt-install@v4
+        with:
+          packages: graphviz
       - run: dotnet test
   publish:
     runs-on: ubuntu-22.04
