--- a/.github/workflows/dotnet-publish.yaml
+++ b/.github/workflows/dotnet-publish.yaml
@@ -8,14 +8,23 @@ on:
       - "release/*"
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        os:
+          - ubuntu-22.04
+          - windows-2022
+        dotnet-version:
+          - 8.0
+          - 9.0
+    name: test dotnet ${{ matrix.dotnet-version }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "9.0.x"
+          dotnet-version: ${{ matrix.dotnet-version }}
       - uses: daaku/gh-action-apt-install@v4
         with:
           packages: graphviz
