--- a/.github/workflows/dotnet-publish.yaml
+++ b/.github/workflows/dotnet-publish.yaml
@@ -27,7 +27,7 @@ jobs:
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
       - uses: daaku/gh-action-apt-install@v4
-        if: RUNNER_OS == 'Linux'
+        if: runner.os == 'Linux'
         with:
           packages: graphviz
       - run: dotnet test
