--- a/.github/workflows/dotnet-publish.yaml
+++ b/.github/workflows/dotnet-publish.yaml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
-      - run: apt update && apt install -y graphviz
+      - run: sudo apt update && sudo apt install -y graphviz
         if: runner.os == 'Linux'
       - run: dotnet test
   publish:
